--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <title>Buncher</title>
   </head>
   <body>
+    <div class="content">
     <header>Buncher</header>
     <h1>Your win-win professional matching</h1>
     <div class="stores_container">
@@ -919,5 +920,6 @@
         <li><a>Contacts</a></li>
       </ul>
     </footer>
+  </div>
   </body>
 </html>
